welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: ';' expected but 'else' found.
		else  {
                ^SnakeBuggle:21: error: ';' expected but 'else' found.
		else {
                ^